code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_29.wast
(assert_invalid
  (module
    (func $type-value-empty-in-loop
      (i32.const 0)
      (loop (loop (result i32)) (drop))
    )
  )
  "type mismatch"
)